[ModalMessage] Fixing z-index

--- a/src/components/ModalMessage/styles.css
+++ b/src/components/ModalMessage/styles.css
@@ -7,6 +7,7 @@
   max-width: 17rem;
   border-radius: 1rem;
   color: var(--neutral-color);
+  z-index: 1000;
 }
 
 .modal.on {
